make it fit better on iphone 5. display dealer and fix bid order.

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ body {
 header {
     background: lightgrey;
     padding: 10px 0;
-    margin-bottom: 10px;
 }
 
 .stage {
@@ -16,6 +15,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    margin: 0;
 }
 
 .add-player-btn {
@@ -24,7 +24,7 @@ header {
 
 .scores {
     display: flex;
-    padding-top: 20px;
+    padding-top: 10px;
     position: fixed;
     bottom: 0;
     background: lightgrey;
@@ -33,6 +33,15 @@ header {
 
 .scores-title {
     margin-right: 20px;
+    margin-bottom: 0;
+}
+
+.scores-table {
+    margin-bottom: 10px;
+}
+
+.scores-player-name {
+    padding-right: 10px;
 }
 
 .btn-bid {
@@ -41,6 +50,10 @@ header {
 
 .player-tricks-row {
     margin-bottom: 10px;
+    font-size: 20px;
+    line-height: 40px;
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 10px;
 }
 
 .player-tricks-count {
@@ -51,4 +64,11 @@ header {
 
 .player-tricks-scoring-controls .btn {
     width: 48px;
+}
+
+@media only screen
+and (max-device-width : 320px) {
+    header {
+        padding: 5px 0;
+    }
 }
